fix(css): prevent col-6 wrapping due to row gap

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -188,8 +188,8 @@ body {
 }
 
 .col-6 {
-  flex: 0 0 50%;
-  max-width: 50%;
+  flex: 0 0 calc(50% - 0.75em);
+  max-width: calc(50% - 0.75em);
 }
 
 @media screen and (max-width: 736px) {
